10-sum: check sum & adds output error message

--- a/00-intro/10-sum/index.html
+++ b/00-intro/10-sum/index.html
@@ -14,10 +14,9 @@
         <label for="num-b">B:</label> <input id="num-b" name="num-b" type="number" />
       </p>
       <p>
-        <label>
-          A + B =
-        </label>
+        <label data-result-label style="display: none;">A + B =</label>
         <output name="result"></output>
+        <span data-result-error>Заполните поля формы выше</span>
       </p>
     </form>
     <script type="module" src="./script.js"></script>
